Multires with Particles: Undo not working #62327
Loading…
x
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
Broken: 75dad2a04b23
When sculpting on an object with a multiresolution modifer and particles, undo doesn't work.
Any undo will change nothing until the step of going into sculpt mode in the first place is undone, which then undoes every action in sculpt mode.
Added subscriber: @JulienKaspar
This issue was referenced by blender/blender@6752022310
Changed status from 'Open' to: 'Resolved'