Fix T62327: Multires with Particles: Undo not working

Modifier stack was forced to be re-evaluated when it was not
supposed to. Should also improve sculpt performance.